--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,13 @@ body {
   background: #080808;
   color: #fff;
 }
+#home,
+#services,
+#about {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 #home {
   width: 100%;
   height: 100vh;
@@ -68,7 +75,7 @@ nav ul li a:hover::after {
   width: 100%;
 }
 .home-content {
-  margin-top: 20%;
+  /* margin-top: 20%; */
   font-size: 30px;
   width: 60%;
 }
@@ -106,7 +113,8 @@ nav ul li a:hover::after {
   margin-top: 10px;
   margin-right: 30px;
 }
-#about {
+#about,
+#services {
   padding: 80px 0;
   height: 100vh;
 }
@@ -182,7 +190,7 @@ nav ul li a:hover::after {
 .bar span {
   height: 10px;
   float: left;
-  background: #ff004f;
+  background: var(--color-primary);
   border: none;
   outline: none;
   /* border-radius: 5px; */
@@ -292,4 +300,53 @@ nav ul li a:hover::after {
 .tab-contents h3 {
   margin: 10px 0;
   color: var(--color-primary);
+}
+#services {
+  /* padding: 30px 0; */
+}
+.service-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 40px;
+  margin-top: 50px;
+}
+.service-list div {
+  background: #262626;
+  padding: 40px;
+  font-size: 13px;
+  font-weight: 300;
+  border-radius: 10px;
+  transition: background-color 0.5s, transform 0.5s;
+}
+.service-list div i {
+  font-size: 50px;
+  margin-bottom: 30px;
+}
+.service-list div h2 {
+  font-size: 30px;
+  font-weight: 800;
+  margin-bottom: 15px;
+}
+.service-list div p {
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+.service-list div a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 550;
+}
+.service-list div:hover {
+  background-color: rgb(255, 0, 79);
+  /* opacity: 0.78; */
+  transform: translateY(-10px);
+  color: #f7f7f7;
+  font-weight: 900;
+}
+.service-title {
+  text-align: center;
+  font-size: 50px;
+  /* margin-top: -50px; */
 }
