--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ body {
 #services,
 #about {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -113,10 +114,9 @@ nav ul li a:hover::after {
   margin-top: 10px;
   margin-right: 30px;
 }
-#about,
-#services {
+#about {
   padding: 80px 0;
-  height: 100vh;
+  height: 90vh;
 }
 .row {
   display: flex;
@@ -134,6 +134,7 @@ nav ul li a:hover::after {
 }
 .col-2 {
   flex-basis: 60%;
+  min-height: fit-content;
 }
 .col-2 h1 {
   font-size: 60px;
@@ -302,7 +303,8 @@ nav ul li a:hover::after {
   color: var(--color-primary);
 }
 #services {
-  /* padding: 30px 0; */
+  padding: 30px 0;
+  height: 90vh;
 }
 .service-list {
   display: grid;
@@ -345,8 +347,20 @@ nav ul li a:hover::after {
   color: #f7f7f7;
   font-weight: 900;
 }
-.service-title {
+.service-list div:hover a {
+  color: black;
+  font-weight: 900;
+}
+.service-title,
+.about-title {
   text-align: center;
   font-size: 50px;
   /* margin-top: -50px; */
+}
+#skills > ul > li {
+  float: left;
+  width: 50%;
+}
+.tab-contents ul {
+  min-height: 10vh;
 }
