--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,7 @@ body {
 }
 .container {
   padding: 10px 10%;
+  /* width: 100%; */
 }
 .navbar {
   width: 100%;
@@ -439,6 +440,11 @@ form .submit-btn {
   font-weight: 600;
 }
 /* /////////////////////////////////////////////////// slider */
+/* .slide-container {
+  position: relative;
+  padding: 10px 10%;
+  overflow: hidden;
+}
 .card {
   width: 320px;
   border-radius: 25px;
@@ -498,4 +504,115 @@ form .submit-btn {
 .description {
   text-align: center;
   font-weight: 600;
+} */
+/* Google Fonts - Poppins */
+.slide-container {
+  max-width: 1120px;
+  width: 100%;
+  padding: 40px 0;
+}
+.slide-content {
+  margin: 0 40px;
+  overflow: hidden;
+  border-radius: 25px;
+}
+.card {
+  border-radius: 25px;
+  background-color: #262626;
+}
+.image-content,
+.card-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 15px;
+  padding: 10px 14px;
+}
+.image-content {
+  position: relative;
+  row-gap: 5px;
+  padding: 25px 0;
+}
+.overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: var(--color-primary);
+  border-radius: 25px 25px 0 25px;
+}
+.overlay::before,
+.overlay::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: -40px;
+  height: 40px;
+  width: 40px;
+  background-color: var(--color-primary);
+}
+.overlay::after {
+  border-radius: 0 25px 0 0;
+  background-color: #262626;
+}
+.card-image {
+  position: relative;
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  background: #fff;
+  padding: 3px;
+}
+.card-image .card-img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 4px solid var(--color-primary);
+}
+.name {
+  font-size: 24px;
+  font-weight: 600;
+  color: #fff;
+}
+.description {
+  font-size: 16px;
+  color: #f7f7f7;
+  font-weight: bold;
+  text-align: center;
+}
+
+.swiper-navBtn::before,
+.swiper-navBtn::after {
+  font-size: 35px;
+}
+.swiper-button-next {
+  right: 0;
+}
+.swiper-button-prev {
+  left: 0;
+}
+.swiper-pagination-bullet {
+  background-color: var(--color-primary);
+  opacity: 1;
+}
+.swiper-pagination-bullet-active {
+  background-color: var(--color-primary);
+}
+
+@media screen and (max-width: 768px) {
+  .slide-content {
+    margin: 0 10px;
+  }
+  .swiper-navBtn {
+    display: none;
+  }
+}
+.swiper-navBtn {
+  color: #fff !important;
+  margin: 0px -10px;
+}
+.swiper-navBtn:hover {
+  color: var(--color-primary) !important;
 }
