--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,11 +15,24 @@ body {
 }
 #home,
 #services,
-#about {
+#about,
+#contact,
+#testimonials,
+#portfolio {
+  height: 85vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  row-gap: 10%;
+  margin-bottom: 5%;
+  padding: 5% 0px;
+}
+.section-title {
+  text-align: center;
+  font-size: 45px;
+  font-weight: 600;
+  margin-bottom: 20px;
 }
 #home {
   width: 100%;
@@ -31,14 +44,13 @@ body {
 }
 .container {
   padding: 10px 10%;
-  /* width: 100%; */
+  width: 100%;
 }
 .navbar {
   width: 100%;
   padding: 10px 10%;
   position: fixed;
   z-index: 10;
-  /* margin-top: 5px; */
   background: black;
 }
 .navbar h1 {
@@ -53,14 +65,13 @@ body {
 .navbar ul li {
   display: inline-block;
   list-style: none;
-  /* text-decoration: none; */
   margin: 10px 20px;
-  /* color: #fff; */
 }
 nav ul li a {
   color: #fff;
   text-decoration: none;
   font-size: 18px;
+  font-weight: 550;
   position: relative;
 }
 nav ul li a::after {
@@ -77,7 +88,6 @@ nav ul li a:hover::after {
   width: 100%;
 }
 .home-content {
-  /* margin-top: 20%; */
   font-size: 30px;
   width: 60%;
 }
@@ -107,53 +117,15 @@ nav ul li a:hover::after {
   align-items: center;
   justify-content: center;
   background: transparent;
-  /* border: 1px solid var(--color-primary);
-  border-radius: 50%; */
   color: var(--color-primary);
   font-size: 40px;
   text-decoration: none;
   margin-top: 10px;
   margin-right: 30px;
 }
-#about {
-  padding: 80px 0;
-  height: 90vh;
-}
-.row {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-}
-.col-1 {
-  /* background: white; */
-  flex-basis: 35%;
-}
-.col-1 img {
-  /* background: white; */
-  width: 100%;
-}
-.col-2 {
-  flex-basis: 60%;
-  min-height: fit-content;
-}
-.col-2 h1 {
-  font-size: 60px;
-  font-weight: 600;
-  color: #fff;
-}
-.col-2 > p {
-  font-size: 19px;
-  color: #fff;
-  margin-top: 10px;
-}
-/* .tab-titles {
-  display: flex;
-  margin: 40px 0 25px;
-} */
+
 .tab-titles {
   display: flex;
-  /* margin: 40px 0 25px; */
 }
 .tab-links {
   margin-right: 50px;
@@ -199,7 +171,6 @@ nav ul li a:hover::after {
   background: var(--color-primary);
   border: none;
   outline: none;
-  /* border-radius: 5px; */
 }
 .html {
   width: 80%;
@@ -295,30 +266,23 @@ nav ul li a:hover::after {
 .tab-contents ul li {
   font-size: 18px;
   font-weight: 500;
-  /* margin: 5px 0; */
 }
 .tab-contents ul li span {
-  /* height: 10px; */
   font-size: 20px;
   font-weight: 600;
-  /* margin: 10px; */
 }
 .tab-contents h3 {
   margin: 10px 0;
   color: var(--color-primary);
 }
-#services {
-  padding: 20px 0;
-  margin: 20px 0;
-  /* height: 90vh; */
-}
+
 .service-list,
 .about-grid,
-.contact-grid {
+.contact-grid,
+.work-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 40px;
-  margin-top: 50px;
 }
 .contact-grid {
   place-items: center;
@@ -354,7 +318,6 @@ nav ul li a:hover::after {
 }
 .service-list div:hover {
   background-color: rgb(255, 0, 79);
-  /* opacity: 0.78; */
   transform: translateY(-10px);
   color: #f7f7f7;
   font-weight: 900;
@@ -363,12 +326,7 @@ nav ul li a:hover::after {
   color: black;
   font-weight: 900;
 }
-.service-title,
-.about-title {
-  text-align: center;
-  font-size: 50px;
-  /* margin-top: -50px; */
-}
+
 #skills > ul > li {
   float: left;
   width: 50%;
@@ -376,10 +334,7 @@ nav ul li a:hover::after {
 .tab-contents ul {
   min-height: 10vh;
 }
-#about2 {
-  margin: 20px 0;
-  padding: 20px 0;
-}
+
 .about-content {
   font-size: 22px;
   font-weight: 600;
@@ -389,12 +344,7 @@ nav ul li a:hover::after {
   font-size: 25px;
   font-weight: 600;
 }
-/* .contact-left {
-  flex-basis: 35%;
-}
-.contact-right {
-  flex-basis: 60%;
-} */
+
 .contact-left p {
   margin: 30px 0px;
   font-size: 18px;
@@ -426,7 +376,6 @@ form .submit-btn {
   width: fit-content;
   border: 1px solid var(--color-primary);
   border-radius: 6px;
-  /* padding: 14px, 60px; */
   padding: 10px 25px;
   font-size: 18px;
   font-weight: 550;
@@ -440,72 +389,7 @@ form .submit-btn {
   font-weight: 600;
 }
 /* /////////////////////////////////////////////////// slider */
-/* .slide-container {
-  position: relative;
-  padding: 10px 10%;
-  overflow: hidden;
-}
-.card {
-  width: 320px;
-  border-radius: 25px;
-  background: #262626;
-}
-.image-content,
-.card-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 10px 14px;
-  row-gap: 15px;
-}
-.image-content {
-  position: relative;
-  row-gap: 5px;
-  padding: 25px 0;
-}
-.overlay {
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  background-color: var(--color-primary);
-  border-radius: 25px 25px 0 25px;
-}
-.overlay::before,
-.overlay::after {
-  content: "";
-  position: absolute;
-  right: 0;
-  bottom: -40px;
-  height: 40px;
-  width: 40px;
-  background-color: var(--color-primary);
-}
-.overlay::after {
-  border-radius: 0 25px 0 0;
-  background-color: #262626;
-}
-.card-image {
-  position: relative;
-  height: 150px;
-  width: 150px;
-  border-radius: 50%;
-  background: #fff;
-  padding: 3px;
-}
-.card-image .card-img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  border: 4px solid var(--color-primary);
-  border-radius: 50%;
-}
-.description {
-  text-align: center;
-  font-weight: 600;
-} */
-/* Google Fonts - Poppins */
+
 .slide-container {
   max-width: 1120px;
   width: 100%;
@@ -615,4 +499,59 @@ form .submit-btn {
 }
 .swiper-navBtn:hover {
   color: var(--color-primary) !important;
+}
+.work {
+  border-radius: 10px;
+  position: relative;
+  overflow: hidden;
+}
+.work img {
+  width: 100%;
+  height: 80%;
+  object-fit: cover;
+  border-radius: 10px;
+  display: block;
+  transition: transform 0.5s;
+}
+.layer {
+  width: 100%;
+  height: 0%;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), var(--color-primary));
+  border-radius: 10px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  row-gap: 10px;
+  transition: height 0.5s;
+}
+.layer h3 {
+  font-size: 22px;
+  font-weight: 600;
+}
+.layer a {
+  color: var(--color-primary);
+  text-decoration: none;
+  font-size: 18px;
+  background-color: #fff;
+  line-height: 60px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  text-align: center;
+}
+.work:hover img {
+  transform: scale(1.1);
+}
+.work:hover .layer {
+  height: 100%;
+}
+.layer p {
+  font-weight: 600;
 }
